[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langgraph-checkpoint-mssql"
version = "0.1.0"
description = "LangGraph checkpoint saver for Microsoft SQL Server (homegrown, no unverified third-party dependencies)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["langgraph", "checkpoint", "sql server", "mssql", "azure sql"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "langgraph-checkpoint>=4.1.0,<5.0.0",
    "pyodbc>=5.0.0",
    "langchain-core>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "python-dotenv>=1.0",
]

[project.urls]
Repository = "https://github.com/sandeshbagmare/mssql-saver"
Issues     = "https://github.com/sandeshbagmare/mssql-saver/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/langgraph_checkpoint_mssql"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
