[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langgraph-checkpoint-azure-sql"
version = "0.1.0"
description = "LangGraph checkpoint saver for Azure SQL Database (and SQL Server)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Sandesh Bagmare" },
    { name = "Pawan Nala" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langgraph-checkpoint>=4.1.0,<5.0.0",
    "pyodbc>=5.0",
]

[project.urls]
Homepage = "https://github.com/sandeshbagmare/azure-sql-saver"
Repository = "https://github.com/sandeshbagmare/azure-sql-saver"

[tool.hatch.build.targets.wheel]
packages = ["src/langgraph_checkpoint_azure_sql"]
